fix: EditFloorPlanEquipment Scrollbar, wenn Höhe zu klein

--- a/src/NewPlace/EditFloorPlanEquipment/EditFloorPlanEquipment.sass
+++ b/src/NewPlace/EditFloorPlanEquipment/EditFloorPlanEquipment.sass
@@ -1,6 +1,11 @@
 @import '../../_basic'
 
 .EditFloorPlanEquipment
+    overflow-y: scroll
+    max-height: 1020px
+    @media screen and (max-height: 1200px)
+        height: calc( 82vh - 2rem )
+        padding-bottom: 2rem 
     .head
         display: flex
         align-items: center
